# county-cricket-live

./: .gitignore  README.md  about.html  channels.json  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml  poll-youtube.yml  post-to-bluesky.yml  test-scripts.yml  update-fixtures.yml  update-streams.yml  validate-channels.yml
css/: styles.css
data/: streams.json  streams_parked.json
docs/: index.html
js/: app.js
public/: index.html  mainfest.json  manifest.json
public/data/: streams.json
public/data/fixtures/: 2025-04-04.json  2025-04-05.json  2025-04-06.json  2025-04-07.json  2025-04-11.json  2025-04-12.json  2025-04-13.json  2025-04-14.json  2025-04-15.json  2025-04-18.json  2025-04-19.json  2025-04-20.json  2025-04-21.json  2025-04-25.json  2025-04-26.json  2025-04-27.json  2025-04-28.json  2025-05-02.json  2025-05-03.json  2025-05-04.json  2025-05-05.json  2025-05-09.json  2025-05-10.json  2025-05-11.json  2025-05-12.json  2025-05-16.json  2025-05-17.json  2025-05-18.json  2025-05-19.json  2025-05-20.json  2025-05-23.json  2025-05-24.json  2025-05-25.json  2025-05-26.json  2025-05-29.json  2025-05-30.json  2025-05-31.json  2025-06-01.json  (+79 more)
public/js/: sw.js
script/: cricapi_client.py  download.py  fixture_extractor.py  generate-scores.js  generate_scores.py  models.py  post_to_bluesky.py  requirements.txt  test_cricketdata_api.py  update_and_notify.py  update_streams.py  validate_channels.py
script/tests/: conftest.py  fixtures.py  test_cricapi_client.py  test_fixture_extractor.py  test_update_streams.py
site/: CNAME
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
