[project]
name = "script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.59",
    "beautifulsoup4>=4.13.3",
    "dateparser>=1.2.1",
    "daterangeparser>=1.3.2",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.166.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "pydantic>=2.6.1",
    "requests>=2.31.0",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["script/tests"]
pythonpath = ["."]
addopts = "-v --cov=script --cov-report=term-missing"
